syntax = "proto3";

package example;

import "google/api/annotations.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/example/hello"
      body: "*"
    };
  };
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
